Fix footer spacing and issues;

--- a/frontend/src/components/css/app.css
+++ b/frontend/src/components/css/app.css
@@ -20,6 +20,10 @@ body{
 
 
 footer{
+	width: 100%;
+}
+
+.footer-container{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -34,6 +38,24 @@ ul{
 	padding: 0px;
 }
 
+.footer-list{
+	margin-left: 10px;
+}
+
+.footer-list>li{
+	margin-right: 10px;
+}
+
+.footer-list>li>a{
+	color: #003569;
+	cursor: pointer;
+	display: inline-block;
+	font-weight: 600;
+	position: relative;
+	text-transform: uppercase;
+	vertical-align: top;
+}
+
 a {
 	color: black;
 	text-decoration: none;
@@ -41,9 +63,12 @@ a {
 }
 
 @media(min-width: 450px){
-	footer{
+	.footer-container{
 		flex-direction: row;
-		justify-content: space-around;
+		justify-content: space-between;
+		width: 80%;
+		max-width: 1000px;
+		margin: auto;
 	}
 
 	h3{
